2010-08-30  Asa Ayers  <Asa.Ayers@Gmail.com>

- Updated Total Cost in /ia crafting to include the AH cut based on the price column. This will also reduce the profit column to consider the additional cost.
- Added an absolute Auction Threshold option. This will allow you to set your threshold at 10g (or whatever you choose) over your cost for all items.

2010-08-27  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added an option to enable the COD warning under /ia options > Messages > COD Warning. This is on by default.

2010-08-24  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 20 - Added a Skip Singles option to the Crafting Rules.
- Ticket 20 - Added a Bonus Queue to the Crafting Rules

2010-08-23  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 32 - Based on the patch from lrdx, I have chaned ItemAuditor to depend on DataStore directly instead of going through Altoholic.

2010-08-20  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 31 - Fixed an error in the 'You just made a profit of ...' message

2010-08-19  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 30 (related to #23) - ItemAuditor is back to counting items in the mailbox, but will subtract items purchased from the AH or COD mail from its item counts.
- Added a menu to allow the user to see what is to be crafted, only what you hae mats for, or view everything so you can see why something isn't to be crafted.
- Added a new Crafting Rules module to allow the user to set up custom rules based on item names.
- Converted the crafting threshold option to allow input instead of a drop down.
- Fixed reagent costs so that /ia snatch will get the correct prices.

2010-08-14  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 29 - Changed the Insufficient COD alert to use a case-insensitive comparison on character names.

2010-08-12  Asa Ayers  <Asa.Ayers@Gmail.com>

- API: added IAapi.GetItemCost

2010-08-11  Asa Ayers  <Asa.Ayers@Gmail.com>
